Support java 11 libraries in test classes